--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="beige"> #C89A6F  </color>
+    <color name="light_grey"> #f1f1f1</color>
+    <color name="grey"> #D4D4D4 </color>
+    <color name="icon_grey"> #D9D9D9</color>
+    <color name="dark_grey"> #404040 </color>
 </resources>
