--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="grey"> #D4D4D4 </color>
     <color name="icon_grey"> #D9D9D9</color>
     <color name="dark_grey"> #404040 </color>
+    <color name="clear"> #0000ffff  </color>
 </resources>
