--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -5,7 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <TextView
         android:id="@+id/logInBtn"
         android:layout_width="wrap_content"
@@ -14,7 +13,7 @@
         android:backgroundTint="@color/white"
         android:text="@string/logIn"
         android:gravity="center_vertical"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:clickable="true"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/appName"
@@ -31,7 +30,7 @@
         android:backgroundTint="@color/white"
         android:gravity="center_vertical"
         android:text="@string/signUp"
-        android:textColor="@color/blue"
+        android:textColor="@color/dark_grey"
         android:textSize="18sp"
         android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/appName"
@@ -48,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="@string/logIn"
+        android:text="@string/signUp"
         android:textColor="@color/black"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -106,37 +105,12 @@
             android:clickable="true"
             android:background="@color/white"
             android:textColor="@color/black"
-            android:hint="@string/password">
+            android:hint="@string/password3">
 
         </EditText>
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/passwordContainer2"
-        android:layout_width="360dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="30dp"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordContainer1">
-
-        <EditText
-            android:id="@+id/passwordET2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingHorizontal="20dp"
-            android:clickable="true"
-            android:background="@color/white"
-            android:textColor="@color/black"
-            android:hint="@string/password2">
-
-        </EditText>
-
-    </androidx.cardview.widget.CardView>
 
 
     <TextView
@@ -153,7 +127,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.123"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordContainer2"
+        app:layout_constraintTop_toBottomOf="@+id/passwordContainer1"
         app:layout_constraintVertical_bias="0.818">
 
     </TextView>
@@ -161,13 +135,13 @@
     <androidx.cardview.widget.CardView
         android:layout_width="110dp"
         android:layout_height="50dp"
-        android:layout_marginTop="139dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="24dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordContainer2">
+        app:layout_constraintTop_toBottomOf="@+id/passwordContainer1">
 
         <ImageButton
             android:id="@+id/loginNextBtn"
