--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -14,7 +14,7 @@
         android:backgroundTint="@color/white"
         android:text="@string/logIn"
         android:gravity="center_vertical"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:clickable="true"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/appName"
@@ -31,7 +31,8 @@
         android:backgroundTint="@color/white"
         android:gravity="center_vertical"
         android:text="@string/signUp"
-        android:textColor="@color/blue"
+        android:textColor="@color/dark_grey"
+        android:onClick="signUpClick"
         android:textSize="18sp"
         android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/appName"
@@ -161,7 +162,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="110dp"
         android:layout_height="50dp"
-        android:layout_marginTop="139dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="24dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
