--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".LoginActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
 
     <TextView
         android:id="@+id/logInBtn"
@@ -13,6 +13,7 @@
         android:layout_marginStart="24dp"
         android:backgroundTint="@color/white"
         android:text="@string/logIn"
+        android:onClick="loginBtnClick"
         android:gravity="center_vertical"
         android:textColor="@color/blue"
         android:clickable="true"
@@ -32,7 +33,7 @@
         android:gravity="center_vertical"
         android:text="@string/signUp"
         android:textColor="@color/dark_grey"
-        android:onClick="signUpClick"
+        android:onClick="signUpBtnClick"
         android:textSize="18sp"
         android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/appName"
@@ -43,6 +44,23 @@
         app:layout_constraintVertical_bias="0.081">
 
     </TextView>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="100dp"
+        android:layout_height="75dp"
+        android:padding="0dp"
+        app:layout_constraintTop_toBottomOf="@id/logInBtn"
+        android:src="@drawable/logo_5"
+        app:layout_constraintBottom_toTopOf="@+id/appName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.912"
+        app:layout_constraintStart_toEndOf="@+id/signUpBtn"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.04"
+        >
+    </androidx.appcompat.widget.AppCompatImageView>
+
+
 
     <TextView
         android:id="@+id/appName"
@@ -62,7 +80,7 @@
     </TextView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/emailContainer"
+        android:id="@+id/usernameContainer"
         android:layout_width="360dp"
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
@@ -74,7 +92,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appName">
 
         <EditText
-            android:id="@+id/emailEt"
+            android:id="@+id/userrnameEt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingHorizontal="20dp"
@@ -88,7 +106,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/passwordContainer1"
+        android:id="@+id/emailContainer"
         android:layout_width="360dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
@@ -97,48 +115,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailContainer">
+        app:layout_constraintTop_toBottomOf="@+id/usernameContainer">
 
         <EditText
-            android:id="@+id/passwordET"
+            android:id="@+id/emailEt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingHorizontal="20dp"
             android:clickable="true"
             android:background="@color/white"
             android:textColor="@color/black"
-            android:hint="@string/password">
+            android:hint="@string/password3">
 
         </EditText>
 
     </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/passwordContainer2"
-        android:layout_width="360dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="30dp"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordContainer1">
-
-        <EditText
-            android:id="@+id/passwordET2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingHorizontal="20dp"
-            android:clickable="true"
-            android:background="@color/white"
-            android:textColor="@color/black"
-            android:hint="@string/password2">
-
-        </EditText>
-
-    </androidx.cardview.widget.CardView>
-
 
     <TextView
         android:id="@+id/forgotPasswordBtn"
@@ -154,7 +145,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.123"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordContainer2"
+        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
         app:layout_constraintVertical_bias="0.818">
 
     </TextView>
@@ -162,16 +153,18 @@
     <androidx.cardview.widget.CardView
         android:layout_width="110dp"
         android:layout_height="50dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="24dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordContainer2">
+        app:layout_constraintHorizontal_bias="0.877"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
+        app:layout_constraintVertical_bias="0.818"
+        >
 
         <ImageButton
-            android:id="@+id/loginNextBtn"
+            android:id="@+id/createAccBtn"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/blue"
@@ -179,7 +172,6 @@
             android:src="@drawable/ic_next"
             tools:layout_editor_absoluteX="239dp"
             tools:layout_editor_absoluteY="768dp">
-
         </ImageButton>
 
     </androidx.cardview.widget.CardView>
