--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -80,7 +80,7 @@
     </TextView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/usernameContainer"
+        android:id="@+id/emailContainerl"
         android:layout_width="360dp"
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
@@ -92,9 +92,10 @@
         app:layout_constraintTop_toBottomOf="@+id/appName">
 
         <EditText
-            android:id="@+id/userrnameEt"
+            android:id="@+id/emailET"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:inputType="textEmailAddress"
             android:paddingHorizontal="20dp"
             android:clickable="true"
             android:background="@color/white"
@@ -106,7 +107,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/emailContainer"
+        android:id="@+id/passwordContainerl"
         android:layout_width="360dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
@@ -115,14 +116,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameContainer">
+        app:layout_constraintTop_toBottomOf="@+id/emailContainerl">
 
         <EditText
-            android:id="@+id/emailEt"
+            android:id="@+id/passwordET"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingHorizontal="20dp"
             android:clickable="true"
+            android:inputType="textPassword"
             android:background="@color/white"
             android:textColor="@color/black"
             android:hint="@string/password3">
@@ -145,7 +147,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.123"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
+        app:layout_constraintTop_toBottomOf="@+id/passwordContainerl"
         app:layout_constraintVertical_bias="0.818">
 
     </TextView>
@@ -159,12 +161,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.877"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
+        app:layout_constraintTop_toBottomOf="@+id/passwordContainerl"
         app:layout_constraintVertical_bias="0.818"
         >
 
         <ImageButton
-            android:id="@+id/createAccBtn"
+            android:id="@+id/loginAccBtn"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/blue"
