--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -79,7 +79,7 @@
     </TextView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/usernameContainer"
+        android:id="@+id/emailContainerl"
         android:layout_width="360dp"
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
@@ -105,7 +105,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/emailContainer"
+        android:id="@+id/passwordContainerl"
         android:layout_width="360dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
@@ -114,13 +114,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameContainer">
+        app:layout_constraintTop_toBottomOf="@+id/emailContainerl">
 
         <EditText
-            android:id="@+id/emailEt"
+            android:id="@+id/passwordET"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingHorizontal="20dp"
+            android:inputType="textEmailAddress"
             android:clickable="true"
             android:background="@color/white"
             android:textColor="@color/black"
@@ -139,7 +140,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.877"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
+        app:layout_constraintTop_toBottomOf="@+id/passwordContainerl"
         app:layout_constraintVertical_bias="0.818"
         >
 
@@ -165,7 +166,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailContainer">
+        app:layout_constraintTop_toBottomOf="@+id/passwordContainerl">
 
         <EditText
             android:id="@+id/passwordEt"
@@ -173,6 +174,7 @@
             android:layout_height="match_parent"
             android:paddingHorizontal="20dp"
             android:clickable="true"
+            android:inputType="textPassword"
             android:background="@color/white"
             android:textColor="@color/black"
             android:hint="@string/password">
