--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -6,11 +6,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:paddingVertical="5dp"
+        android:src="@drawable/logo_5">
+
+    </ImageView>
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/dashboard_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black">
+        android:layout_marginTop="60dp"
+        app:tabTextColor="@color/blue"
+        app:tabMode="scrollable"
+app:tabMaxWidth="200dp"
+        app:tabMinWidth="200dp"
+        android:paddingHorizontal="10dp"
+        app:tabSelectedTextColor="@color/dark_blue"
+        app:tabIndicatorColor="@color/dark_blue">
 
     </com.google.android.material.tabs.TabLayout>
 
@@ -18,37 +33,25 @@
         android:id="@+id/dashboard_viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="49dp">
+        android:layout_marginTop="109dp">
     </androidx.viewpager.widget.ViewPager>
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="DASHBOARD"-->
-<!--        android:textSize="25sp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-<!--    </TextView>-->
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottomAppBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:hideOnScroll="true"
+        app:fabAnimationMode="slide">
 
-<!--    <com.google.android.material.tabs.TabLayout-->
-<!--        android:id="@+id/tabs"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/black">-->
+    </com.google.android.material.bottomappbar.BottomAppBar>
 
-<!--        <androidx.viewpager.widget.ViewPager-->
-<!--            android:id="@+id/dashboard_viewPager"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="60dp"-->
-<!--            >-->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_anchor="@id/bottomAppBar"
+        android:src="@drawable/ic_event">
 
-<!--        </androidx.viewpager.widget.ViewPager>-->
-
-<!--    </com.google.android.material.tabs.TabLayout>-->
-
-
-
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
