--- a/app/src/main/res/menu/bottom_app_nav.xml
+++ b/app/src/main/res/menu/bottom_app_nav.xml
@@ -4,14 +4,16 @@
     <item
         android:id="@+id/events"
         android:icon="@drawable/ic_event"
-        android:title="@string/events">
+        android:title="@string/events"
+        android:onClick="eventsOnClick">
 
     </item>
 
     <item
         android:id="@+id/chat"
         android:icon="@drawable/ic_chat"
-        android:title="@string/chat">
+        android:title="@string/chat"
+        android:onClick="chatOnClick">
 
     </item>
 
@@ -24,13 +26,15 @@
     <item
         android:id="@+id/quiz"
         android:icon="@drawable/ic_quiz"
-        android:title="@string/quiz">
+        android:title="@string/quiz"
+        android:onClick="quizOnClick">
 
     </item>
 
     <item
         android:id="@+id/account"
         android:icon="@drawable/ic_account"
+        android:onClick="accountOnClick"
         android:title="@string/account">
 
     </item>
