--- a/app/src/main/res/layout/edit_profile_activity.xml
+++ b/app/src/main/res/layout/edit_profile_activity.xml
@@ -5,5 +5,146 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.EditProfileActivity">
+    <ImageView
+        android:id="@+id/logoBar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:paddingVertical="5dp"
+        android:src="@drawable/logo_5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </ImageView>
+
+    <!--     Circle Image from github: hdodenhof/CircleImageView-->
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/edit_userImage"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/ic_user"
+        android:backgroundTint="@color/black"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logoBar">
+
+    </de.hdodenhof.circleimageview.CircleImageView>
+
+    <EditText
+        android:id="@+id/edit_userName"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:fontFamily="sans-serif"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_userImage">
+
+    </EditText>
+
+    <EditText
+        android:id="@+id/edit_userStatus"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="120dp"
+        android:textAlignment="center"
+        android:textSize="19sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="sans-serif"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_userImage">
+
+    </EditText>
+
+    <ImageButton
+        android:id="@+id/updatePictureButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@color/white"
+        android:contentDescription="@string/button"
+        android:src="@drawable/ic_done"
+        android:layout_marginTop="155dp"
+        app:layout_constraintBottom_toTopOf="@+id/updateNameButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logoBar" />
+
+    <ImageButton
+        android:id="@+id/updateNameButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:contentDescription="@string/button"
+        android:src="@drawable/ic_done"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="55dp"
+        app:layout_constraintBottom_toTopOf="@id/updateStatusButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/updatePictureButton">
+    </ImageButton>
+
+    <ImageButton
+        android:id="@+id/updateStatusButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:contentDescription="@string/button"
+        android:src="@drawable/ic_done"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@id/updateNameButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="196dp" />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/white"
+            android:backgroundTint="@color/white"
+            app:fabAnimationMode="slide"
+            app:hideOnScroll="true">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/editProfile_bottomNavView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="16dp"
+                android:background="@color/white"
+                app:menu="@menu/bottom_app_nav">
+
+            </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/editProfile_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:contentDescription="@string/title_activity_dashboard"
+            android:onClick="editProfileFabBtnClick"
+            android:src="@drawable/ic_home"
+            app:elevation="3dp"
+            app:layout_anchor="@id/bottomAppBar"
+            app:tint="@color/blue">
+        </com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
