--- a/app/src/main/res/menu/bottom_app_nav.xml
+++ b/app/src/main/res/menu/bottom_app_nav.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/events"
@@ -34,7 +35,7 @@
     <item
         android:id="@+id/account"
         android:icon="@drawable/ic_account"
-        android:onClick="accountOnClick"
+        android:onClick="profileOnClick"
         android:title="@string/account">
 
     </item>
