--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentNews">
 
-<!--    <com.google.android.material.tabs.TabLayout-->
-<!--        android:id="@+id/tabs"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/black">-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-<!--        <androidx.viewpager.widget.ViewPager-->
-<!--            android:id="@+id/dashboard_viewPager"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="60dp"-->
-<!--            >-->
+            <WebView
+                android:id="@+id/newsWebView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-<!--        </androidx.viewpager.widget.ViewPager>-->
+            </WebView>
+    </LinearLayout>
 
-<!--    </com.google.android.material.tabs.TabLayout>-->
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</ScrollView>
