--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -50,7 +50,7 @@
         android:layout_height="75dp"
         android:padding="0dp"
         app:layout_constraintTop_toBottomOf="@id/logInBtn"
-        android:src="@drawable/logo_5"
+        android:src="@raw/logo_5"
         app:layout_constraintBottom_toTopOf="@+id/appName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.912"
